--- a/src/pages/util/button.css
+++ b/src/pages/util/button.css
@@ -1,10 +1,12 @@
 .btn {
   background-color: var(--accent-color);
-  text-align: center;
   border: none;
+  border-radius: 2px;
   box-shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 20%);
-  padding: 1rem 0.5rem;
   font-weight: bold;
+  min-width: 5rem;
+  padding: 0.7rem;
+  text-align: center;
 }
 
 .btn:hover {
