--- a/src/pages/util/button.css
+++ b/src/pages/util/button.css
@@ -1,14 +1,24 @@
-.btn {
+.btn,
+.btn-err,
+.btn-acc {
   background-color: var(--accent-color);
   border: none;
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 20%);
   font-weight: bold;
-  min-width: 5rem;
   padding: 0.7rem;
   text-align: center;
 }
 
-.btn:hover {
+.btn-err {
+  background-color: var(--error-color);
+}
+
+.btn-acc {
+  background-color: var(--positive-color);
+}
+
+.btn:hover,
+.btn-acc:hover {
   background-color: var(--accent-cmp-color);
 }
