--- a/src/pages/util/modal.css
+++ b/src/pages/util/modal.css
@@ -1,15 +1,15 @@
 :host {
-  position: fixed;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  left: 0;
-  top: 0;
+  background-color: var(--modal-bg-color, #4d4d4db3);
+  display: flex;
   height: 100%;
+  justify-content: center;
+  left: 0;
+  padding: 1rem;
+  position: fixed;
+  top: 0;
   width: 100%;
   z-index: 1;
-  background-color: var(--modal-bg-color, #4d4d4db3);
-  padding: 1rem;
 }
 
 * {
@@ -17,25 +17,33 @@
 }
 
 .container {
-  padding: 1.3rem;
   /* nesting vars can cause performance issues*/
-  background-color: var(--modal-container-bg-color, #363636);
-  box-shadow: 0px 0px 4px 0px var(--dark-shadow-color);
-  position: relative;
+  background-color: var(--modal-container-bg-color, var(--bg-v2-color));
   border-radius: 5px;
+  box-shadow: 0px 2px 4px 0px hsl(0deg 0% 8% / 30%);
+  flex: var(--modal-container-flex, initial);
+  padding: 1.5rem 1rem;
+  position: relative;
   max-height: 100%;
   overflow: auto;
-  flex: var(--modal-container-flex, initial);
+}
+
+@media screen and (max-width: 400px) {
+  :host,
+  .container {
+    padding: 1.5rem 0.1rem;
+  }
 }
 
 .close-btn {
-  cursor: pointer;
-  background-color: var(--modal-close-btn-bg-color, #ca190c);
-  box-shadow: 0px 0px 4px 1px var(--dark-shadow-color);
-  color: var(--modal-close-btn-color, white);
-  position: absolute;
-  top: 0;
-  right: 0;
+  background-color: var(--modal-close-btn-bg-color, var(--error-color));
   border: none;
+  box-shadow: 0px 0px 4px 1px var(--dark-shadow-color);
+  cursor: pointer;
+  color: var(--modal-close-btn-color, white);
   font-weight: bold;
+  padding: 0 5px;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
