--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,11 @@
   --accent-lt-color: #ffd9ff;
   --accent-cmp-color: #a8d085;
   --positive-color: #76db8c;
+  --positive-color-tsp-500: hsla(133, 58%, 66%, 0.5);
   --error-color: #eb5d5d;
+  --error-color-tsp-500: hsla(0, 78%, 64%, 0.5);
   --neutral-color: #e1c457;
+  --neutral-color-tsp-500: hsla(47, 70%, 61%, 0.5);
 }
 
 @media (prefers-color-scheme: dark) {
