--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -11,9 +11,11 @@ dashboard-next-match {
 }
 
 dashboard-next-match {
-  text-align: center;
-  box-shadow: 0px 2px 6px 0px hsl(0deg 0% 6% / 20%);
   background-color: var(--bg-v2-color);
+  box-shadow: 0px 2px 6px 0px hsl(0deg 0% 6% / 20%);
+  margin: 0.25rem 0;
+  padding: 1px 0px;
+  text-align: center;
 }
 
 .team {
@@ -22,9 +24,9 @@ dashboard-next-match {
 }
 
 .team-logo {
-  width: 150px;
-  height: 150px;
   background-color: var(--bg-v4-color);
+  height: 150px;
+  width: 150px;
 }
 
 .history-boxes {
@@ -33,11 +35,11 @@ dashboard-next-match {
 }
 
 .history-box {
-  flex: 1 1 1.5rem;
-  padding: 0.2rem 0;
   background-color: var(--accent-lt-color);
   box-shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 5%);
   color: #2a2a2a;
+  flex: 1 1 1.5rem;
+  padding: 0.2rem 0;
 }
 
 .history-box.won {
