--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -10,6 +10,16 @@ dashboard-next-match {
   box-sizing: border-box;
 }
 
+.menu-bar {
+  align-items: center;
+  display: flex;
+  gap: 0.5rem;
+}
+
+dashboard-save-file > a {
+  color: var(--font-color);
+}
+
 dashboard-next-match {
   background-color: var(--bg-v2-color);
   box-shadow: 0px 2px 6px 0px hsl(0deg 0% 6% / 20%);
