--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --accent-lt-color: #ffd9ff;
   --accent-cmp-color: #a8d085;
   --positive-color: #76db8c;
+  --positive-color-tsp-300: hsla(133, 58%, 66%, 0.7);
   --positive-color-tsp-500: hsla(133, 58%, 66%, 0.5);
   --error-color: #eb5d5d;
   --error-color-tsp-500: hsla(0, 78%, 64%, 0.5);
