--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -11,7 +11,7 @@ dashboard-next-match {
 }
 
 dashboard-next-match {
-  background-color: var(--bg-v2-color);
+  background-color: var(--dk-bg-color-700, var(--lt-bg-color-100));
   box-shadow: 0px 2px 6px 0px hsl(0deg 0% 6% / 20%);
   margin: 0.25rem 0;
   padding: 1px 0px;
@@ -24,7 +24,7 @@ dashboard-next-match {
 }
 
 .team-logo {
-  background-color: var(--bg-v4-color);
+  background-color: var(--dk-bg-color-600, var(--lt-bg-color-200));
   height: 150px;
   width: 150px;
 }
@@ -35,7 +35,7 @@ dashboard-next-match {
 }
 
 .history-box {
-  background-color: var(--accent-lt-color);
+  background-color: var(--dk-primary-color, var(--lt-primary-color));
   box-shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 5%);
   color: #2a2a2a;
   flex: 1 1 1.5rem;
@@ -43,13 +43,13 @@ dashboard-next-match {
 }
 
 .history-box.won {
-  background-color: var(--positive-color);
+  background-color: var(--dk-positive-color, var(--lt-positive-color));
 }
 
 .history-box.lost {
-  background-color: var(--error-color);
+  background-color: var(--dk-error-color, var(--lt-error-color));
 }
 
 .history-box.draws {
-  background-color: var(--neutral-color);
+  background-color: var(--dk-neutral-color, var(--lt-neutral-color));
 }
