--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -36,7 +36,7 @@ home-team-picker {
 
 .saves > li {
   align-items: baseline;
-  background-color: var(--bg-v3-color);
+  background-color: var(--dk-bg-color-600, var(--lt-bg-color-200));
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 25%);
   display: flex;
