--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,10 @@
   --lt-primary-color: hsl(276, 93%, 84%);
   --lt-primary-color-700: hsl(279, 43%, 63%);
   --lt-primary-color-300: hsl(300, 100%, 93%);
+  --lt-on-primary-color: var(--lt-on-bg-color);
   --lt-secondary-color: #a8d085;
   --lt-positive-color: #76db8c;
+  --lt-on-positive-color: var(--lt-on-bg-color);
   --lt-positive-color-tsp-300: hsla(133, 58%, 66%, 0.7);
   --lt-error-color: #eb5d5d;
   --lt-neutral-color: #e1c457;
@@ -30,9 +32,10 @@
     --dk-primary-color: var(--lt-primary-color);
     --dk-primary-color-700: var(--lt-primary-color-700);
     --dk-primary-color-300: var(--lt-primary-color-300);
-    --dk-on-positive-color: var(--lt-on-bg-color);
+    --dk-on-primary-color: var(--lt-on-bg-color);
     --dk-secondary-color: var(--lt-secondary-color);
     --dk-positive-color: var(--lt-positive-color);
+    --dk-on-positive-color: var(--lt-on-bg-color);
     --dk-positive-color-tsp-300: var(--lt-positive-color-tsp-300);
     --dk-error-color: var(--lt-error-color);
     --dk-neutral-color: var(--lt-neutral-color);
@@ -51,9 +54,10 @@
   --dk-primary-color: var(--lt-primary-color);
   --dk-primary-color-700: var(--lt-primary-color-700);
   --dk-primary-color-300: var(--lt-primary-color-300);
-  --dk-on-positive-color: var(--lt-on-bg-color);
+  --dk-on-primary-color: var(--lt-on-bg-color);
   --dk-secondary-color: var(--lt-secondary-color);
   --dk-positive-color: var(--lt-positive-color);
+  --dk-on-positive-color: var(--lt-on-bg-color);
   --dk-positive-color-tsp-300: var(--lt-positive-color-tsp-300);
   --dk-error-color: var(--lt-error-color);
   --dk-neutral-color: var(--lt-neutral-color);
