--- a/src/pages/common/sim-controls.css
+++ b/src/pages/common/sim-controls.css
@@ -2,6 +2,8 @@
 @import "../util/form.css";
 
 :host {
+  border-radius: 20px / 35px 0 0 15px;
+  box-shadow: 0px 3px 5px 0px hsla(0, 0%, 5%, 0.25);
   display: flex;
   gap: 3px;
   margin-right: 3px;
@@ -26,7 +28,7 @@ visual-sim {
 game-date {
   background-color: var(--dk-bg-color-700, var(--lk-bg-color-100));
   border: 2px solid var(--dk-on-bg-color, var(--lt-on-bg-color));
-  border-radius: 15% / 30% 0 0 30%;
+  border-radius: 20px / 35px 0 0 15px;
   border-right: none;
   display: flex;
   flex-direction: column;
