--- a/src/pages/util/layout.css
+++ b/src/pages/util/layout.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 44rem) {
   :host {
     grid-template-areas:
       "head head"
@@ -31,7 +31,7 @@ nav {
   transform: translateY(-50%);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 31rem) {
   :host {
     grid-template-areas:
       "head"
