--- a/src/pages/util/modal.css
+++ b/src/pages/util/modal.css
@@ -30,7 +30,7 @@
   overflow: auto;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 20rem) {
   :host,
   .container {
     padding: 1.5rem 0.1rem;
