extract a reusable game page

--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,13 +1,7 @@
-:host,
+sff-dashboard,
 dashboard-main,
 dashboard-next-match {
   display: block;
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
 }
 
 dashboard-next-match {
