--- a/src/pages/common/sim-controls.css
+++ b/src/pages/common/sim-controls.css
@@ -7,6 +7,7 @@
   display: flex;
   gap: 3px;
   margin-right: 3px;
+  position: relative;
   text-align: center;
 }
 
@@ -14,6 +15,19 @@
 *::after,
 *::before {
   box-sizing: border-box;
+}
+
+#play-disabled-desc {
+  background-color: var(--dk-error-color, var(--lt--error-color));
+  border-radius: 18px 0px 25px 10px;
+  box-shadow: 0px 1px 3px 0px hsla(0, 0%, 5%, 0.15);
+  font-size: 0.85rem;
+  font-weight: bold;
+  margin: 0px;
+  padding: 2px 0.75rem;
+  position: absolute;
+  right: 0;
+  top: 100%;
 }
 
 .visual-sim {
@@ -27,9 +41,14 @@
   border-right: none;
   display: flex;
   flex-direction: column;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   font-weight: bold;
-  padding: 0.5rem;
+  padding: 0.5rem 0.85rem;
+}
+
+.game-date > :last-child {
+  height: 1rem;
+  width: 100%;
 }
 
 :where(btn-sim-options, play-sim) > .btn {
