--- a/src/pages/players/player-page.css
+++ b/src/pages/players/player-page.css
@@ -1,3 +1,5 @@
+@import url("../util/button.css");
+
 sff-player {
   display: block;
 }
@@ -21,6 +23,12 @@ sff-player {
   flex-direction: column;
   flex-grow: 1;
   padding-left: 40px;
+}
+
+.plr-team > .btn {
+  align-self: start;
+  padding: 0.2rem 0.5rem;
+  margin: 0.3rem 20px;
 }
 
 .plr-skills {
