--- a/src/pages/draft/draft.css
+++ b/src/pages/draft/draft.css
@@ -34,7 +34,7 @@ th {
   white-space: nowrap;
 }
 
-.impv-symbol {
+.rtg-symbol {
   border-bottom: 2px solid;
   display: inline-block;
   width: 1.5rem;
@@ -48,9 +48,11 @@ td:nth-of-type(1) {
 th:nth-of-type(3),
 th:nth-of-type(4),
 th:nth-of-type(5),
+th:nth-of-type(6),
 td:nth-of-type(3),
 td:nth-of-type(4),
-td:nth-of-type(5) {
+td:nth-of-type(5),
+td:nth-of-type(6) {
   width: 2.2rem;
   font-size: 0.85rem;
 }
@@ -59,11 +61,11 @@ th:nth-of-type(1) {
   width: 3rem;
 }
 
-th:nth-of-type(7) {
+th:nth-of-type(8) {
   width: 4.2rem;
 }
 
-th:nth-of-type(6) {
+th:nth-of-type(7) {
   width: 7rem;
 }
 
@@ -74,12 +76,13 @@ th:nth-of-type(6) {
 
   th:nth-of-type(3),
   th:nth-of-type(4),
-  th:nth-of-type(5) {
+  th:nth-of-type(5),
+  th:nth-of-type(6) {
     width: 8%;
   }
 
-  th:nth-of-type(6),
-  th:nth-of-type(7) {
+  th:nth-of-type(7),
+  th:nth-of-type(8) {
     width: 15%;
   }
 
