add trade offers and the ui to handle them

--- a/src/pages/trade/trade-page.css
+++ b/src/pages/trade/trade-page.css
@@ -74,6 +74,10 @@
   width: 2.5rem;
 }
 
+.cnt-checkbox--on {
+  background-color: var(--dk-positive-color, var(--lt-positive-color));
+}
+
 .plr-bio > :first-child {
   margin: 0px;
 }
